# LSOD-EGUI

./: Cargo.toml  README.md
src/: configuration.rs  context_menu.rs  hotkey.rs  main.rs  main_window.rs  utils.rs  window.rs
src/gui/: edit_layout.rs  edit_splits.rs  left_panel.rs  mod.rs  settings.rs
src/gui/edit_splits/: meta.rs  mod.rs  segments.rs
