[package]
name = "lsod-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
livesplit-core = {version = "0.12.0", features = ["software-rendering"]}
pixels = "0.9.0"
egui_glow = {  version = "0.18.1", features = ["winit"] }
glutin = "0.28.0"
glow = "0.11.2"
rfd = "0.8.2"
anyhow = "1.0.57"
serde = "1.0.137"
dirs = "4.0.0"
serde_json = "1.0.81"
enum-map = "2.1.0"
